update user setup two-factor authentication
